Refactor chatbot to FastAPI backend with RAG engine
Replaces the CLI chatbot implementation with a FastAPI-based API in app/api.py and modularizes the RAG logic into app/rag_engine.py. Removes app/chatbot_tcc.py, updates requirements.txt to include FastAPI, Uvicorn, and python-dotenv, and modifies the ChromaDB database. This change enables web-based interaction and improves code maintainability.

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,13 @@ torchaudio==2.7.1+cu118
 # API Groq
 groq==0.36.0
 
+# API Web (FastAPI)
+fastapi==0.122.0
+uvicorn==0.38.0
+
+# Gerenciamento de variaveis de ambiente
+python-dotenv==1.2.1
+
 # Utilitarios
 numpy==2.3.5
 pydantic==2.12.4
